04-traefik/dashboard-auth.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth-dashboard
  namespace: traefik

spec:
  basicAuth:
    secret: traefik-htaccess
