04-traefik/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: traefik
  name: traefik
spec:
  finalizers:
  - kubernetes
