04-traefik/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: "traefik"

spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-gamehost
  routes:
    - match: Host(`traefik.apps.gamehost.fi`)  && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: auth-dashboard
